# autopoiesis-rs

./: .codex-loop-state  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYSIS.md  CHANGELOG.md  CODE_STANDARD.md  CONTEXT.md  CONVO.md  CONVO_RESPONSE.md  CRITICAL_REVIEW.md  Cargo.toml  DAVID_VISION_SUMMARY.md  FEEDBACK.md  LEAN_REVIEW.md  Makefile  PLAN.md  PREVENTION.md  README.md  REVIEW.md  TASK.md  VISION.md  agents.local.toml  agents.toml
.claude/: settings.json
.claude/hooks/: codegraph-pretool-search.sh
.claude/plans/: wild-purring-rivest.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
autopoiesis_read_tool_rel_1774425178235855492/: file.txt
docs/: KE_REVIEW.md  SECURITY_MODEL.md  index.md  risks.md  roadmap.md  vision.md
docs/architecture/: guarded-shell-executor.md  overview.md
docs/archive/: critical-review-framework.md  doc-review-2026-03-24.md  identity-v2-deep-research.md  restructure-plan.md  vibe-coding-2026.md
docs/current/: architecture.md  risks.md
docs/research/: claude-code-analysis.md
docs/specs/: identity-v2.md  operator-vision.md  plan-engine.md  restructure-plan.md
identity/: constitution.md  context.md  identity.md
identity-templates/: constitution.md  context.md
plans/: current.md
research/: agent-runtime-landscape-2026-03.md
scripts/: code-graph  pre_commit_secret_scan.sh
sessions/: 2026-03-15.jsonl  queue.sqlite
sessions/cli-1773578634513772/: 2026-03-15.jsonl
sessions/session-1773578625759318154/: 2026-03-15.jsonl
sessions/session-1773578901671461008/: 2026-03-15.jsonl
skills/: code-review.toml
src/: agent.rs  auth.rs  cli.rs  config.rs  context.rs  delegation.rs  gate.rs  guard.rs  identity.rs  lib.rs  logging.rs  main.rs  model_selection.rs  paths.rs  plan.rs  principal.rs  read_tool.rs  server.rs  session.rs  session_registry.rs  skills.rs  spawn.rs  store.rs  subscription.rs  template.rs  terminal_ui.rs  test_support.rs  time.rs  tool.rs  tools.rs  turn.rs  util.rs
src/agent/: audit.rs  child_drain.rs  loop_impl.rs  mod.rs  queue.rs  shell_execute.rs  spawn.rs  tests.rs  usage.rs
src/app/: args.rs  enqueue_command.rs  mod.rs  plan_commands.rs  session_run.rs  subscription_commands.rs  tracing.rs
src/child_session/: completion.rs  create.rs  mod.rs
src/config/: agents.rs  domains.rs  file_schema.rs  (+7 more)
tests/: MANUAL.md  integration.rs  plan_engine.rs  pre_commit_secret_scan.rs  review_fixes.md  shipped_shell_policy.rs  tier_integration.rs  xtask_lint_paths.sh
xtask/: lint.sh  lint_checks.sh
(+117 files in other folders)
