[package]
name = "autopoiesis"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "brotli", "gzip", "deflate", "zstd"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
