[package]
name = "autopoiesis"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust agent runtime with an LLM loop and shell tooling."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "brotli", "gzip", "deflate", "zstd", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
regex = "1"
shell-words = "1"
tiktoken-rs = "0.9.1"
futures-util = "0.3"
libc = "0.2"

[features]
integration = []
