[package]
name = "autopoiesis"
version = "0.1.0"
edition = "2024"
description = "A lightweight Rust agent runtime with an LLM loop and shell tooling."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "brotli", "gzip", "deflate", "zstd", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
regex = "1"
shell-words = "1"
tiktoken-rs = "0.9.1"
futures-util = "0.3"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = { version = "0.7", features = ["ws", "json"] }
axum-extra = "0.9"
tower = "0.5"
tower-http = "0.6"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }

[features]
integration = []

[dev-dependencies]
tokio-tungstenite = "0.24"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
todo = "warn"
dbg_macro = "warn"
